--- a/Index.html
+++ b/Index.html
@@ -14,34 +14,39 @@
     <div class="container">
         <script>loadPartial("/Partials/NavBar.html")</script>
         <div class="ContainerDown">
-            <div class="ContainerCard">
-                <h2 class="textStyleForCard text-xl font-semibold text-gray-800">Конвертер валют</h2>
-                <p class="textStyleForCard text-gray-600">Джерело:по середньому банківському курсу</p>
+            <div class="containerRow">
+                <div class="ContainerCard">
+                    <h2 class="textStyleForCard text-xl font-semibold text-gray-800">Конвертер валют</h2>
+                    <p class="textStyleForCard text-gray-600">Джерело:по середньому банківському курсу</p>
 
-                <div class="ContainerCurrencies">
-                    <div class="ContainerCurrency" tabindex="0">
-                        <h1 class="text-left text-xl font-semibold">У мене є</h1>
-                        <script>loadPartial("/Partials/InputForm.html")</script>
+                    <div class="ContainerCurrencies">
+                        <div class="ContainerCurrency" tabindex="0">
+                            <h1 class="text-left text-xl font-semibold">У мене є</h1>
+                            <script>loadPartial("/Partials/InputForm.html")</script>
+                        </div>
+
+
+                        <div class="ContainerCurrency" tabindex="0" id="GetMoney">
+                            <h1 class="text-left text-xl font-semibold">Я отримаю </h1>
+                            <script>loadPartial("/Partials/GetForm.html")</script>
+                        </div>
                     </div>
-
-
-                    <div class="ContainerCurrency" tabindex="0" id="GetMoney">
-                        <h1 class="text-left text-xl font-semibold">Я отримаю </h1>
-                        <script>loadPartial("/Partials/GetForm.html")</script>
-                    </div>
+                    <button type="button" onclick="Convert('/CurrentCurrency.json')" class="py-2.5 px-4 bg-green-500 text-white rounded-lg">
+                        Результат
+                    </button>
                 </div>
-
-                <button type="button" onclick="Convert('/CurrentCurrency.json')" class="py-2.5 px-4 bg-green-500 text-white rounded-lg">
-                    Результат
-                </button>
-
-
+                <script>loadPartial("/Partials/UsersReview.html")</script>
             </div>
 
             <script>loadPartial("/Partials/Section.html")</script>
-
+            <script>loadPartial("/Partials/SectionAbout.html")</script>
         </div>
+
+
+        <script>loadPartial("/Partials/Footer.html")</script>
+
     </div>
+
 
 
     <script src="/Js/Converter.js"></script>
